<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Viaja Seguro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="home">home</string>
    <string name="banner_de_la_compa_ia">banner de la compañia</string>
    <string name="horarios">Horarios</string>
    <string name="buscar">Buscar</string>
    <string name="exampledesc">description text</string>
    <string name="exampletitle">Titulo</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_app">Viaje seguro</string>
    <string name="acceso">Acceso</string>
    <string name="descrip_phonenumber">Por favor ingrese su número celular</string>
    <string name="numero_celular">Número Celular</string>
    <string name="message_warning_register_phone">Revise que el número celular sea correcto</string>
    <string name="warning">Aviso</string>
    <string name="verificacion">Verificación</string>
    <string name="ingrese_el_codigo">Ingrese el Código por favor</string>
    <string name="si_no_recibe_el_codigo">Si no recibe el Código inténtelo de nuevo</string>
    <string name="confirmar">Confirmar</string>
    <string name="cod_incompleto">Código incompleto</string>
    <string name="solicitando_servicio">Solicitando Servicio</string>
    <string name="loggin_fail">No se pudo iniciar sesión</string>
    <string name="codigo_enviado">Código enviado</string>
    <string name="usuario">Usuario</string>
    <string name="datos_del_perfil">Datos del perfil</string>
    <string name="nombre_del_usuario">Nombre de usuario</string>
    <string name="e_mail">E-Mail</string>
    <string name="cargando">Cargando...</string>
    <string name="fail_mail">E-Mail inválido</string>
    <string name="nombre_corto">Nombre demasiado corto</string>
    <string name="seleccion">Selección</string>
    <string name="escoja_opcion">Escoja una opción</string>
    <string name="confirmar_origen">Confirmar Origen</string>
    <string name="request_gps">Solicitando GPS</string>
    <string name="gps">GPS</string>
    <string name="confirmar_destino">Confirmar Destino</string>
    <string name="location_updated">Localización actualizada</string>
    <string name="ok">OK</string>
    <string name="key_map_tutorial">tutorialmap</string>
    <string name="tutorial_key">keyorigin</string>
    <string name="preference_tutorial">tutorial</string>
    <string name="buscar_ubicacion">Buscar ubicación</string>
    <string name="se_necesita_permiso">Se necesitan los permisos de ubicación</string>
    <string name="gps_activado">Gps activado</string>
    <string name="distancia">distance</string>
    <string name="duracion">duration</string>
    <string name="sin_permiso_gps">Está utilizando la app sin permisos de ubicación</string>
    <string name="tiempo_estimado">Tiempo estimado</string>
    <string name="distancia_estimada">Distancia estimada</string>
    <string name="solicitar_ahora">Solicitar ahora</string>
    <string name="buscando_conductor">Buscando conductor</string>
    <string name="cancelar_servicio">cancelar Servicio</string>
    <string name="solicitud">Solicitud</string>
    <string name="alerta">Alerta</string>
    <string name="no_conductor">No se encontró un conductor\nvuelva a intentarlo más tarde</string>
    <string name="aceptar">Aceptar</string>
    <string name="conductor_encontrado">CONDUCTOR ENCONTRADO\nESPERANDO RESPUESTA</string>
    <string name="no_se_encontro_conductor">NO SE ENCONTRO UN CONDUCTOR</string>
    <string name="busqueda_en">Nueva Búsqueda\nen:</string>
    <string name="txt_panico">Alerta\n</string>
    <string name="txt_info">Información de la APP</string>
    <string name="txt_excesos">Excesos de velocidad: </string>
    <string name="txt_rep_conductor">Reportar Conductor</string>
    <string name="txt_mapa">Mapa</string>
    <string name="txt_qr">Código QR</string>
    <string name="txt_kmh"> KM/H</string>
    <string name="vacio">.....</string>
    <string name="txt_tu_velocidad">Tu velocidad:</string>
    <string name="datos_capturados">Datos capturados</string>
    <string name="escaner_de_codigo_qr">ESCANER DE CODIGO QR</string>
    <string name="escanea_un_registro">Por favor debe escanear un código QR para registrar los datos del vehículo</string>
    <string name="bus_data">bus_data</string>
    <string name="txt_exceso_reportado"></string>
    <string name="txt_exceso_anulado">Reporte anulado</string>
    <string name="mostrar_ubicacion">Mostrar ubicación</string>
    <string name="tu_posicion">Tu posición</string>
    <string name="permiso_denegado">Permisos denegados</string>
    <string name="imagen_de_titulo_1_reporte">imagen de titulo 1 reporte</string>
    <string name="reporte">Reporte</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="conductor_rebasa_en_nlugares_inapropiados">Conductor rebasa en\nlugares inapropiados</string>
    <string name="buen_servicio">Buen servicio</string>
    <string name="recoge_pasajeros_fuera_ndel_area_de_embarque">Recoge pasajeros fuera\ndel área de embarque</string>
    <string name="se_mantiene_el_veh_culo_nestacionado_mucho_tiempo">Se mantiene el vehículo\nestacionado mucho tiempo</string>
    <string name="para_a_recargar_combustible">Para a recargar combustible</string>
    <string name="reporte_enviado">Reporte enviado</string>
    <string name="img_boton_alerta">img boton alerta</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="txt_latitud">Latitud:</string>
    <string name="img_titulo_mis_datos">img titulo mis datos</string>
    <string name="default_value_cero">0</string>
    <string name="txt_longitud">Longitud:</string>
    <string name="txt_velocidad">Velocidad:</string>
    <string name="default_value_whitout_direction">...</string>
    <string name="txt_ubicaci_n">Ubicación:</string>
    <string name="compartir_ubicaci_n">Compartir Ubicación</string>
    <string name="sharing_id">"\nID del usurio: "</string>
    <string name="no_hay_excesos">No hay excesos de velocidad registrados.</string>
    <string name="vuelva_a_intentarlo">Vuelva a intentarlo más tarde.</string>
    <string name="debe_estar_registrado_trans">Debe estar registrado en un transporte.</string>
</resources>