<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogota"
    tools:context=".activities.navigation.fragment.InfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="596dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tiulo_mis_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginStart="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/mis_datos"
            android:textColor="#DD000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="110dp"
            android:layout_alignStart="@+id/tiulo_mis_datos"
            android:src="@drawable/autobu"
            android:contentDescription="@string/img_titulo_mis_datos" />



        <TextView
            android:id="@+id/share_latitud"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="219dp"
            android:layout_marginTop="243dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="355dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/default_value_cero"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/txts_lat"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="196dp"
            android:layout_marginBottom="355dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txt_latitud"
            tools:ignore="TextViewEdits" />

        <TextView

            android:id="@+id/share_longitud"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="219dp"
            android:layout_marginTop="243dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="313dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/default_value_cero"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/txts_long"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="196dp"
            android:layout_marginBottom="313dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txt_longitud"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/txts_velo"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="196dp"
            android:layout_marginBottom="271dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txt_velocidad"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/share_velocidad"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="219dp"
            android:layout_marginTop="243dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="271dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/default_value_cero"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/share_ubicacion"
            android:layout_width="173dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="219dp"
            android:layout_marginTop="243dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="209dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/default_value_whitout_direction"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/txts_ub"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginTop="243dp"
            android:layout_marginEnd="197dp"
            android:layout_marginBottom="231dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txt_ubicaci_n"
            tools:ignore="TextViewEdits" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="202dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="116dp"
            android:layout_marginTop="398dp"
            android:layout_marginEnd="93dp"
            android:layout_marginBottom="147dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/compartir_ubicaci_n"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </RelativeLayout>

</FrameLayout>