<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogota"
    tools:context=".activities.navigation.fragment.ReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="50dp"
        android:paddingBottom="50dp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/reporte"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/radio11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841" />
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/reporte"
            app:layout_constraintBottom_toTopOf="@+id/radio11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.916" />
        <CheckBox
            android:id="@+id/radio11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio44"
            android:text="@string/buen_servicio"
            app:layout_constraintBottom_toTopOf="@+id/radio22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.251"
            app:layout_constraintStart_toStartOf="parent" />
        <CheckBox
            android:id="@+id/radio22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:paddingBottom="10dp"
            android:text="@string/conductor_rebasa_en_nlugares_inapropiados"
            app:layout_constraintBottom_toTopOf="@+id/radio33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/radio33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio22"
            android:paddingBottom="10dp"
            android:text="@string/recoge_pasajeros_fuera_ndel_area_de_embarque"
            app:layout_constraintBottom_toTopOf="@+id/radio44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/radio55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio33"
            android:layout_marginBottom="40dp"
            android:paddingBottom="10dp"
            android:text="@string/se_mantiene_el_veh_culo_nestacionado_mucho_tiempo"
            app:layout_constraintBottom_toTopOf="@+id/txt_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.40"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/radio44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio55"
            android:layout_marginEnd="5dp"
            android:text="@string/para_a_recargar_combustible"
            app:layout_constraintBottom_toTopOf="@+id/radio55"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent" />



        <TextView
            android:id="@+id/tv_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:fontFamily="sans-serif"
            android:text="Escribe un comentario:"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_rep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_tv"
            android:layout_width="230dp"
            android:layout_height="91dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/et_bg"
            android:backgroundTint="@color/caja_texto"
            android:fontFamily="sans-serif"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_rep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_comentario"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_rep"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/letra_menu"
            android:fontFamily="sans-serif"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/guardar_datos"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.937" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>